--- a/resume-zh_CN.tex
+++ b/resume-zh_CN.tex
@@ -11,103 +11,77 @@
 \begin{document}
 \pagenumbering{gobble} % suppress displaying page number
 
-\name{姓名}
+\name{林明杰}
 
 % {E-mail}{mobilephone}{homepage}
 % be careful of _ in emaill address
-\contactInfo{(+86) 123-4567-8901}{xxx@xxx.com}{Web前端研发工程师}{GitHub @hijiangtao}
+\contactInfo{(+86) 185-5008-6576}{linmingjie@foxmail.com}{集成电路设计 应用工程师}{}
 % {E-mail}{mobilephone}
 % keep the last empty braces!
 %\contactInfo{xxx@yuanbin.me}{(+86) 131-221-87xxx}{}
  
-\section{个人总结}
-本人在校成绩优秀、乐观向上，工作负责、自我驱动力强、热爱尝试新事物，认同开放、连接、共享的Web在未来的不可替代性。在校期间长期从事可视分析(Web的2D/3D时空可视化)相关研究，对Web技术发展趋势及前端工程化解决方案有浓厚兴趣。\textbf{现任职于 BAT 集团。}
+
+\section{工作经历}
+\datedsubsection{\textbf{恩智浦半导体 | 飞思卡尔半导体} 芯片测试工程师|芯片原型验证工程师}{2014.6-2020.7}
+\begin{itemize}
+  \item 负责芯片的硅后功能验证，验证内容包含数字IP和模拟IP, 测试环境搭建
+  \item 担任\textbf{多个芯片验证工作负责人}，负责模块分配，进度管理，结果汇总
+  \item 负责FPGA的芯片硅前验证，IP的前期测试，软件开发和ROM开发
+  \item 负责芯片硅后验证，模拟IP的参数测试，如ADC，DAC，CMP，Power等模块的参数测试
+  \item 参与芯片前端验证，芯片功能验证，协助SDK开发验证，熟悉整个芯片开发设计流程
+\end{itemize}
+
+\section{项目经历}
+\datedsubsection{\textbf{基于FPGA的ASIC原型系统验证}}{2016.11-2020.7}
+\begin{itemize}
+  \item 该项目主要是将MCU的ASIC设计\textbf{移植到 FPGA 上实现}, 可以以在流片前期实现对数字IP和系统集成的验证，提供软件和ROM的早期开发平台，缩短ASIC的研发周期。
+   \begin{itemize}
+    \item 模拟模块替换 
+    \item 优化FPGA时钟资源，对ASIC时钟树进行必要对修改
+    \item RAM和Flash模型替换; 
+    \item FPGA和ASIC仿真环境做相应的修改
+   \end{itemize}
+  \item FPGA实现之后的板级调试, 定位FPGA原型设计中的问题，结合功能仿真和后仿真实现对FPGA原型设计中对问题定位，修复FPGA中的时序问题。
+  \item 开发FPAG配套的升级脚本，提高ROM验证效率
+\end{itemize}
+
+\datedsubsection{\textbf{基于Python和LabVIEW的自动化测试系统开发}}{2014.11-2020.7}
+\begin{itemize}
+  \item 该项目主要是为了提高MCU测试效率而开发的一套\textbf{自动测试系统}, 系统分为自动测试和结果收集展示两大部分，其中自动测试部分可以依据测试代码产生各种测试激励，并控制常见的实验室仪器(如示波器，信号发生器，电源等等)对结果进行测量，并根据测试日志判断测试结果;结果收集部分可以将测试日志保存到数据库，并对测试结果进行分析汇总和网页展示。
+   \begin{itemize}
+    \item 基于Python和串口的命令交互系统，可以实现测试流程控制，命令延时分发，命令结果汇总
+    \item 基于串口命令的仪器控制，可以实现MCU对电源，示波器，万用表，信号发生器的控制
+    \item 测试结果汇总，数据库存储，基于浏览器网页的测试结果展示和统计
+   \end{itemize}
+  \item 支持\textbf{测试过程回溯}，可以从网页下载测试过程的关键数据
+  \item 支持\textbf{自动测试}，可以有效的提高芯片测试效率
+\end{itemize}
+
+\datedsubsection{\textbf{芯片模拟参数验证}}{2014.11-2020.7}
+\begin{itemize}
+  \item 负责实现芯片模拟参数验证，为芯片数据手册提供数据支持，基于LabVIEW和NI的测试仪器对芯片的功耗，ADC的静态参数和动态参数，DAC的参数，ACMP的模拟参数进行测试。对芯片进行高低温参数测试
+   \begin{itemize}
+    \item 芯片功耗测试包含芯片运行模式和低功耗模式下（高低温）的电压电流功耗测试
+    \item ADC/DAC参数测试包含有效位测试，DNL, INL, 转换速率等
+    \item ACMP测试包含迟滞阈值，传播延时等参数测试
+    \item 芯片的高低温测试主要包含芯片稳定性和芯片功能缺陷复现
+   \end{itemize}
+\end{itemize}
 
 % \section{\faGraduationCap\ 教育背景}
-\section{教育背景}
-\datedsubsection{\textbf{中国科学院大学},计算机应用技术,\textit{在读硕士研究生}}{2015.9 - 2018.6}
-\ \textbf{排名11/133(前10\%)},中国科学院大学学业奖学金(2次),IEEE Student member,预计2018年6月毕业
-\datedsubsection{\textbf{北京理工大学},软件工程,\textit{工学学士}}{2011.9 - 2015.6}
-\ \textbf{排名2/62(前5\%)},国家励志奖学金,人民奖学金(7次),科技竞赛奖(2次),北京市普通高等学校优秀毕业生,北京理工大学优秀毕业生,软件学院金牌毕业生,优秀团员/优秀学生(5次)
-\datedsubsection{\textbf{荷兰 莱顿大学},计算机科学与技术,\textit{国家留学基金委公派交换生}}{2015.3 - 2015.5}
-\ 2014年中国政府奖学金(\textit{http://www.csc.edu.cn/}),DID-ACTE项目交换生(\textit{http://did-acte.org/})
+\section{教育经历}
+\datedsubsection{\textbf{中国科学院大学},光学工程,\textit{硕士研究生}}{2011.9 - 2014.7}
+\datedsubsection{\textbf{武汉理工大学},通信工程,\textit{工学学士}}{2007.9 - 2011.7}
 
 % \section{\faCogs\ IT 技能}
 \section{技术能力}
 % increase linespacing [parsep=0.5ex]
 \begin{itemize}[parsep=0.2ex]
-  \item \textbf{编程语言}: JavaScript (ECMAScript, Node.js), HTML/CSS, Python, Go, SQL, C, Shell
-  \item \textbf{操作系统,数据库与工程构建}: Linux/macOS/MySQL/MongoDB/Git/webpack/Progressive Web App
-  \item \textbf{关键词}: React/Vue.js/D3.js(SVG)/three.js(canvas, WebGL)/chrome extension/Express
+  \item \textbf{编程语言}: Python, Verilog, C, Shell, LabVIEW， tcl
 \end{itemize}
 
-% \end{itemize}
-
-\section{实习经历}
-\datedsubsection{\textbf{XXXX集团 | XXXXX}, 前端开发工程师}{2011-2017}
-\begin{itemize}
-  \item 北京前端团队全面负责 web 应用与基础架构框架研发
-  \item 独立负责 XX 需求(React),通过HTML5 本地存储及JSBridge实现在XXX发布上线
-  \item 独立负责 chrome 插件开发,完成 XXX 等页面的开发与交叉营销的接入工作
-\end{itemize}
-
-\datedsubsection{\textbf{YYYY科技有限公司 | YYYYYY},数据挖掘与可视化工程师}{2005-2011}
-\begin{itemize}
-  \item \textbf{利用海量用户定位数据，对城市空间及人群移动特征进行研究。}第一个课题是基于香农熵和人群出行模式，构建城市网格与用户矩阵分析城市多样性/流动性分布；可视分析平台前端与可视化基于D3/Vue/Express开发，数据分析与存储采用Python/MySQL/MongoDB技术，为了均衡大数据情况下的页面可视化渲染消耗用canvas替代svg。第二个课题是对海量商场定位数据做人群分类与可视化查询，依据该系统撰写的论文被CIKM 2016(DAVA Workshop)录用，并收录于中科院软件所年会成果集
-  \item 负责数据科学部HQ LAB的可视化原型开发，主导 TalkingMind 平台系统设计与前端开发
-\end{itemize}
-
-\datedsubsection{\textbf{北京ZZZZ信息技术有限公司 | ZZZZZZ},Web开发工程师}{2005-2005}
-\begin{itemize}
-  \item \textbf{独立负责MUSE部门的可视化组件研发。}与平台研发、设计协作完成 DeepGlint Developer 平台可视化图表组件的集成开发，符合完全定制化渲染、响应式布局与实时更新等特点
-  \item 利用 D3+Vue+WebGL(Three.js) 尝试实现三维空间的人群移动可视化
-\end{itemize}
-
-% \begin{onehalfspacing}
-% \end{onehalfspacing}
-
-% \datedsubsection{\textbf{DID-ACTE} 荷兰莱顿}{2015年}
-% \role{本科毕业设计}{LIACS 交换生}
-% 利用结巴分词对中国古文进行分词与词性标注，用已有领域知识训练形成 classifier 并对结果进行调优
-% \begin{onehalfspacing}
-% \begin{itemize}
-%   \item 利用结巴分词对中国古文进行分词与词性标注
-%   \item 利用已有领域知识训练形成 classifier, 并用分词结果进行测试反馈
-%   \item 尝试不同规则，对 classifier 进行调优
-% \end{itemize}
-% \end{onehalfspacing}
-
-\section{竞赛获奖/项目作品}
-% increase linespacing [parsep=0.5ex]
-\begin{itemize}[parsep=0.2ex]
-%   \item LeetCodeOJ Solutions, \textit{https://github.com/hijiangtao/LeetCodeOJ}
-  \item 第三届中国软件杯大学生软件设计大赛\textbf{全国一等奖}( \textit{http://www.cnsoftbei.com/} ),2014 年8月
-  \item 中国机器人大赛创意设计大赛\textbf{全国特等奖}( \textit{http://www.rcccaa.org/} ),2013年8月
-%   \item 中国机器人大赛暨Robocup公开赛(武术擂台赛)全国一等奖,2013年10月
-  \item 第11届北京理工大学“世纪杯”竞赛学生课外科技作品竞赛\textbf{特等奖},2013年8月
-  \item VIS Components for security system, \textit{https://hijiangtao.github.io/ss-vis-component/}
-  \item 个人博客：\textit{https://hijiangtao.github.io/}，更多作品见 \textit{https://github.com/hijiangtao}
-%   \item 电视节目"爸爸去哪儿"可视化分析展示, \textit{https://hijiangtao.github.io/variety-show-hot-spot-vis/}
-\end{itemize}
-
-% \section{\faHeartO\ 项目/作品摘要}
-% \section{项目/作品摘要}
-% \datedline{\textit{An Integrated Version of Security Monitor Vis System}, https://hijiangtao.github.io/ss-vis-component/ }{}
-% \datedline{\textit{Dark-Tech}, https://github.com/hijiangtao/dark-tech/ }{}
-% \datedline{\textit{融合社交网络数据挖掘的电视节目可视化分析系统}, https://hijiangtao.github.io/variety-show-hot-spot-vis/}{}
-% \datedline{\textit{LeetCodeOJ Solutions}, https://github.com/hijiangtao/LeetCodeOJ}{}
-% \datedline{\textit{Info-Vis}, https://github.com/ISCAS-VIS/infovis-ucas}{}
-
-
-% \section{\faInfo\ 社会实践/其他}
-\section{社区参与/实践其他}
-% increase linespacing [parsep=0.5ex]
-\begin{itemize}[parsep=0.2ex]
-  \item 乐于参与开源社区讨论,\textbf{参与翻译 Vue.js, webpack, WebAssembly, Babel 文档，印记中文成员}
-  \item 中国科学院大学2016秋季学期可视化与可视分析课程助教，\textit{http://vis.ios.ac.cn/infovis-ucas/}
-  \item 未来论坛学生会成员、北理社联新闻信息中心主任、北理工软件学院学生会宣传部副部长(2012-2016)
-  \item 2013-2015 北京市共青团“温暖衣冬”志愿者,第九届园博会志愿者,2014 FLL机器人世锦赛志愿者
-\end{itemize}
+\section{个人总结}
+有较好的组织能力，学习上善于掌握各种新技术，学习能力强, 在\textbf{恩智浦半导体}担任芯片测试工程师和芯片原型验证开发工程师，担任多个项目负责人，负责开发基于\textbf{Python}和\textbf{LabVIEW}的自动化测试系统。
 
 %% Reference
 %\newpage
