Refactor contact information formatting in resume-zh_CN.tex

--- a/resume-zh_CN.tex
+++ b/resume-zh_CN.tex
@@ -15,7 +15,9 @@
 
 % {E-mail}{mobilephone}{homepage}
 % be careful of _ in email address
-\contactInfo{(+86) 185-5008-6576}{linmingjie@foxmail.com}{系统软件总监 | MCU/SoC 系统软件架构 | 芯片验证 FPGA 原型 | 10+ 年半导体经验}{}
+\centerline{\sffamily\large{(+86) 185-5008-6576} \textperiodcentered\ {\sffamily\large linmingjie@foxmail.com}}
+\centerline{\sffamily\large{系统软件总监 | MCU/SoC 系统软件架构 | 芯片验证 FPGA 原型 | 10+ 年半导体经验}}
+\vspace{0.7ex}
 % {E-mail}{mobilephone}
 % keep the last empty braces!
 %\contactInfo{xxx@yuanbin.me}{(+86) 131-221-87xxx}{}
