Update .gitignore and resume files for improved LaTeX build management and formatting consistency

--- a/resume-zh_CN.tex
+++ b/resume-zh_CN.tex
@@ -45,13 +45,13 @@
 \section{项目经历}
 \datedsubsection{\textbf{基于FPGA的ASIC原型系统验证}}{2016.11-2020.7}
 \begin{itemize}
-  \item 该项目主要是将MCU的ASIC设计\textbf{移植到 FPGA 上实现}, 可以以在流片前期实现对数字IP和系统集成的验证，提供软件和ROM的早期开发平台，缩短ASIC的研发周期。
+  \item 该项目主要是将MCU的ASIC设计\textbf{移植到 FPGA 上实现}，可以在流片前期实现对数字IP和系统集成的验证，提供软件和ROM的早期开发平台，缩短ASIC的研发周期。
    \begin{itemize}
-    \item 优化FPGA时钟资源，对ASIC时钟树进行必要对修改
-    \item FPGA和ASIC仿真环境做相应的修改, 开发流程标准化制定
+    \item 优化FPGA时钟资源，对ASIC时钟树进行必要的修改
+    \item FPGA和ASIC仿真环境做相应的修改，开发流程标准化制定
    \end{itemize}
-  \item FPGA实现之后的板级调试, 定位FPGA原型设计中的问题，结合功能仿真和后仿真实现对FPGA原型设计中对问题定位，修复FPGA中的时序问题。
-  \item 开发FPAG配套的升级脚本，提高ROM验证效率
+  \item FPGA实现之后的板级调试，定位FPGA原型设计中的问题，结合功能仿真和后仿真实现对FPGA原型设计中的问题定位，修复FPGA中的时序问题。
+  \item 开发FPGA配套的升级脚本，提高ROM验证效率
 \end{itemize}
 
 \datedsubsection{\textbf{基于Python和LabVIEW的自动化测试系统开发}}{2014.11-2020.7}
@@ -93,12 +93,12 @@
 
 \datedsubsection{\textbf{芯片设计开发与验证}}{2020.7-至今}
 \begin{itemize}
-  \item 参与芯片RoadMap指定，芯片需求分析，芯片架构设计，芯片模块设计和验证
+  \item 参与芯片RoadMap制定，芯片需求分析，芯片架构设计，芯片模块设计和验证
   \item 负责芯片FPGA验证及硅后验证工作，确保芯片功能和性能符合设计要求
    \begin{itemize}
     \item 负责项目包含YTM321B1Lx, YTM32B1Mx, YTM32B1Hx等MCU芯片的设计开发和验证工作
     \item 为芯片规格参数提供数据支持，对测试结果进行分析和问题定位。
-    \item 对芯片应用和芯片设计、芯片测试等有深入了解，能够从多个角度对芯片开发过程提出改善建议
+    \item 对芯片应用、芯片设计、芯片测试等有深入了解，能够从多个角度对芯片开发过程提出改善建议
    \end{itemize}
 \end{itemize}
 
@@ -133,7 +133,7 @@
 
 曾任职于恩智浦半导体，负责多款 MCU 芯片验证与原型开发；现任江苏云途半导体系统软件总监，主导 MCU 系统软件架构设计与团队建设，深度参与芯片产品定义、设计与验证。
 
-兼具技术深度与管理经验，能够从芯片架构、软件系统、验证流程多个层面推动产品成功交付.
+兼具技术深度与管理经验，能够从芯片架构、软件系统、验证流程多个层面推动产品成功交付。
 %% Reference
 %\newpage
 %\bibliographystyle{IEEETran}
